# PenrosePy

./: .gitignore  README.md  penrose.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
penrose/: draw.py  mpl_config.py  penrose.py
penrosepy/: draw.py  mpl_config.py  penrose.py
