[metadata]
name = PenrosePy
author = devanshshukla99
author_email = devanshshukla99@outlook.com
url = https://github.com/devanshshukla99/PenrosePy/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
description = Draw beautiful penrose diagrams!
long_description = file: README.rst

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    matplotlib
    numpy
    sympy
    shapely


[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.js, *.html, *.css, *.woff

[flake8]
max-line-length = 110

[tool:pytest]
norecursedirs = ".tox" "*.egg-info"
minversion = 4.6
testpaths = tests

[coverage:run]
disable_warnings = no-data-collected
omit =
    */__init__*
    */_version.py
    tests/*
    */conftest.py
    *setup*
